<resources>
    <string name="app_name">TechNews</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="article_image">Article Image</string>
    <string name="sample_time">Article release time</string>
    <string name="article_list">Article List</string>
    <string name="title">Title</string>
    <string name="share">Share</string>
    <string name="btn_text">Read Article</string>
    <string name="author">Author</string>
    <string name="favorite">Favorite</string>
    <string name="backgroundImageViewContentDesc">Main Widget</string>
    <string name="no_articles">No articles</string>

    <string name="facebook_app_id">2063214410664146</string>
    <string name="fb_login_protocol_scheme">fb2063214410664146</string>
    <string name="full_screen_ads">ca-app-pub-1659982070244366/7399953428</string>
    <string name="action_about">About</string>
    <string name="close">CLOSE</string>
    <string name="login_failed">Authentication failed.</string>
    <string name="welcome">Welcome</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="published_time">Published time</string>
    <string name="update_msg">Your application is old. Update app.</string>
    <string name="update_alert">Update the application !!</string>
    <string name="about_msg">This app was created by Sanjay with help of NewsAPI. You can get latest Tech News from different blogs.</string>
    <string name="about_alert">About!!</string>
    <string name="ok_string">OK</string>
    <string name="later">Later</string>
    <string name="update">Update</string>
    <string name="app_url_missing">App URL is missing</string>
    <string name="article">Article</string>
    <string name="tech_radar">Tech Radar</string>
    <string name="tech_cruch">Tech Crunch</string>
    <string name="ars_technica">Ars Technica</string>
    <string name="the_verge">The Verge</string>
    <string name="hacker_news">Hacker News</string>
    <string name="google_news">Google News</string>
    <string name="logout">Logout</string>
    <string name="widget_fav_string">Tech News - Favorite</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="no_internet">No Internet!</string>
    <string name="read_article_colon">Read article :</string>
    <string name="link_colon">Link :</string>
    <string name="language_not_supported">Language not supported</string>
    <string name="by">By </string>
</resources>
