<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/article_image"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:contentDescription="@string/article_image"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <TextView
                    android:id="@+id/title"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/author"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    tools:text="@string/author" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />


            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <!-- Content below header and above footer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:elevation="10dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:weightSum="3">


        <ImageButton
            android:id="@+id/share_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_menu_share"
            android:tint="@color/button_grey" />

        <com.like.LikeButton
            android:id="@+id/like_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/favorite"
            app:icon_size="24dp"
            app:icon_type="heart" />


        <ImageButton
            android:id="@+id/btn_open_article"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_action_open"
            android:tint="@color/button_grey" />

        <ImageButton
            android:id="@+id/btn_speak"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_action_speak"
            android:tint="@color/button_grey" />


    </LinearLayout>

</FrameLayout>
