<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/widget_header"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/backgroundImageViewContentDesc"
            android:elevation="10dp"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/widget_fav_string"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />


        </LinearLayout>

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/widget_article_list"
            style="@style/WidgetStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/widget_header"
            android:background="@color/colorWhite"
            android:dividerHeight="2dp"
            android:divider="@drawable/divider"
            android:fitsSystemWindows="true"
            android:footerDividersEnabled="false"
            android:padding="4dp" />

        <TextView
            android:id="@+id/widget_empty"
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:layout_below="@+id/widget_article_list"
            android:gravity="center_horizontal"
            android:text="@string/no_articles"
            android:visibility="visible"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black" />

    </RelativeLayout>

</FrameLayout>