<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/triangle"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.snj.technews.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="#FFF"
        android:textSize="60sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical">



        <Button
            android:id="@+id/gmail_signin_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/facebook_login_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_button"
            android:drawableStart="@mipmap/ic_gplus"
            android:elevation="15dp"
            android:foregroundGravity="bottom"
            android:padding="5dp"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/com_facebook_button_background_color"
            android:textSize="13sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/facebook_login_button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_button"
            android:drawableStart="@mipmap/ic_fb"
            android:elevation="15dp"
            android:foregroundGravity="bottom"
            android:padding="5dp"
            android:text="@string/continue_with_facebook"
            android:textAllCaps="false"
            android:textColor="@color/com_facebook_button_background_color"
            android:textSize="13sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>